# resource-allocation-problem

./: .gitignore  CMakeLists.txt  README.md
src/: Polynomial.cpp  Polynomial.h  Solver.cpp  Solver.h  main.cpp
